# develop-memo

./: README.md
Arduino/: README.md
Arduino/arduino-example-find-ascii/: Doxyfile
Bit operators/: course_mathcs_bit-array.html  course_mathcs_bit-field.html  readme.md
Build management/Compilers/: README.md
C/: readme.md
CI_CD/: README.md
Documentation/: README.md
Documentation/fragments/: Doxyfile-common.in  Doxyfile-internal.in  Doxyfile-public-api.in
Documentations/Developpement/: README.md  readme.md
FFMPEG/: video-streaming.md  video-transform.md
Ftp/: proftpd.md
GStreamer/: README.md
Git/: README.md  git-cmd-line.md  git-commit-message.md  git-gitignore.md  git-patches.md  git-workflow.md
GrabSerial/: readme.md
IDE/: README.md
IDE/VsCode/: README.md
Linux/Ubuntu/: ubuntu_packages.md  ubuntu_tips.md
Linux/linux/: custom_bash_aliases.md  linux-pwd-management.md  linux-tips.md
Markdown/: README.md
Network/: README.md  api-network.md  network-details.md
Network/access-point/: README.md  mode-ap.md  mode-sta.md  mode-switch.md
Network/discovery/: README.md
Operating System/Android/: android_apps.md
Operating System/MacOS/: brew.md
Operating System/Windows/: README.md  windows_codecs.md  windows_packages.md  windows_tips.md
Python/: README.md
Python/template/: .gitignore  pyproject.toml
Python/template/helloworld/: __init__.py  cli.py  constants.py
Qt/: README.md  qt_linux.md  qt_mac.md  qt_windows.md
Shell/: readme.md
Ssh/: dropbear.md
Toolchains/: README.md
Valgrind/: README.md
Windows/: README.md
(+130 files in other folders)
